<resources>
    <string name="app_name" translatable="false">Doxy VPN</string>

    <string name="admob_id" translatable="false">ca-app-pub-5937643397203975~8036074590</string>

    <string name="banner_id" translatable="false">ca-app-pub-5937643397203975/3364000711</string>
    <string name="banner_test_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <string name="rewarded_id" translatable="false">ca-app-pub-5937643397203975/6301989399</string>
    <string name="rewarded_test_id" translatable="false">ca-app-pub-3940256099942544/5224354917</string>

    <string name="interstitial_id" translatable="false">ca-app-pub-5937643397203975/1297074729</string>
    <string name="interstitial_test_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>

    <string name="native_id" translatable="false">ca-app-pub-5937643397203975/4056486468</string>
    <string name="native_test_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>

    <string name="adapty_placement_id" translatable="false">tpid</string>

    <string name="connecting">Connecting</string>
    <string name="image">image</string>
    <string name="disconnected">Disconnected</string>
    <string name="tap_to_connect">Tap to connect</string>
    <string name="connected">Connected</string>
    <string name="try_different_server">Try different server</string>
    <string name="loading">Loading..</string>
    <string name="invalid_device">Invalid Device</string>
    <string name="authenticating">Authenticating</string>
    <string name="vpn">VPN</string>
    <string name="browser">Browser</string>
    <string name="settings">Settings</string>
    <string name="starting">Starting</string>
    <string name="hello_blank_fragment" translatable="false">fragment</string>
    <string name="vpn_is_running">VPN is running. Please stop VPN first.</string>
    <string name="launch_phase_0">Checking internet connection…</string>
    <string name="launch_phase_1">Bringing up settings…</string>
    <string name="launch_phase_2">Receiving remote configuration…</string>
    <string name="launch_phase_3">Accessing the servers…</string>
    <string name="launch_phase_4">Checking your subscription…</string>
    <string name="launch_phase_5">Done</string>
    <string name="auto_ms_format">Auto . %s</string>
    <string name="premium">Premium</string>
    <string name="basic">Basic</string>
    <string name="location">Location</string>
    <string name="search_location">Search Location</string>
    <string name="connection">Connection</string>
    <string name="statistics">Statistics</string>
    <string name="dynamic_background">Dynamic Background</string>
    <string name="auto_connect">Auto Connect</string>
    <string name="usage">Usage</string>
    <string name="icon">icon</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="later">Later</string>
    <string name="no_connection">No Connection</string>
    <string name="no_connection_detail">You have no Internet connection. Please check your connections and try again.</string>
    <string name="go_network_settings">Go Network Settings</string>
    <string name="try_again">Try Again</string>
    <string name="exit">Exit to App</string>
    <string name="no_statistics_found_start_the_vpn_now">No statistics found. Start the VPN now!</string>
    <string name="lng_d" translatable="false">Lng: %s</string>
    <string name="lat_d" translatable="false">Lat: %s</string>
    <string name="region">Region</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="speed_test">Speed Test</string>
    <string name="latency">Latency</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="server">Server</string>
    <string name="time">Time</string>
    <string name="connection_successful">Connection successful</string>
    <string name="connection_report">Connection report</string>
    <string name="rating_text">Do you like our free VPN app?\nGive us rating.</string>
    <string name="share_with_your_friends">Share with your friends</string>
    <string name="limitless_fast_secure"><![CDATA[Limitless, fast & secure]]></string>
    <string name="share">Share</string>
    <string name="tap_to_start">Tap to Start</string>
</resources>
