<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:background="@color/colorPrimaryDark"
    tools:context=".Activities.ConnectionReportActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:id="@+id/appbar"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
            app:contentInsetEnd="10dp"
            app:contentInsetStart="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_arrow_left_24"
                android:foreground="@drawable/ripple"
                app:tint="@color/plat1"
                app:contentPadding="5dp"
                android:id="@+id/closeBT"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_bold"
                android:letterSpacing="0.2"
                android:id="@+id/connectionTypeTxt"
                android:textColor="@color/colorWhite"
                android:textSize="18dp"
                android:textStyle="bold" />

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="start"
                    android:padding="20dp">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/server"
                        android:textColor="@color/colorWhite"
                        android:gravity="center"
                        android:checked="true"
                        app:checkedState="checked"
                        android:clickable="false"
                        app:buttonTint="@color/colorWhite"
                        app:buttonIconTint="@color/primary"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:gravity="center|start">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="48dp"
                            android:layout_height="32dp"
                            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small"
                            android:id="@+id/serverFlag"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginStart="10dp"
                            android:gravity="center|start">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:id="@+id/serverName"
                                android:fontFamily="@font/quicksand_bold"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/serverIp"
                                android:fontFamily="@font/quicksand_bold"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="start|center"
                    android:padding="20dp">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        app:checkedState="checked"
                        android:textColor="@color/colorWhite"
                        android:gravity="center"
                        android:clickable="false"
                        app:buttonTint="@color/colorWhite"
                        app:buttonIconTint="@color/primary"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center|start"
                        android:id="@+id/serverTime"
                        android:textStyle="bold"
                        android:textSize="20dp"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/colorPrimary"/>

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_id"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@color/primary"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"
                android:layout_marginTop="15dp"
                android:src="@drawable/ic_like_24"
                app:contentPadding="16dp"
                app:tint="@color/colorWhite"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_text"
                android:gravity="center"
                android:layout_marginTop="10dp"/>

            <androidx.appcompat.widget.AppCompatRatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="0"
                android:id="@+id/ratingView"
                android:progressTint="@color/primary"
                android:layout_marginTop="15dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/colorPrimary"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:clipToPadding="false">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/share_content"
                    android:scaleType="centerCrop"
                    android:id="@+id/shareSrc"
                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_toEndOf="@id/shareSrc"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="center|start">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share_with_your_friends"
                        android:textStyle="bold"
                        android:fontFamily="@font/quicksand_bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/limitless_fast_secure"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/blat1"/>

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:id="@+id/shareBT"
                        android:fontFamily="@font/quicksand_bold"
                        android:text="@string/share"
                        app:backgroundTint="@color/primary"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>