<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".Activities.SpeedTestActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:id="@+id/appbar"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
            app:contentInsetEnd="10dp"
            app:contentInsetStart="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_close_24"
                android:foreground="@drawable/ripple"
                app:tint="@color/plat1"
                app:contentPadding="5dp"
                android:id="@+id/closeBT"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_bold"
                android:letterSpacing="0.2"
                android:textColor="@color/colorWhite"
                android:textSize="18dp"
                android:text="@string/speed_test"
                android:textStyle="bold" />

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 ms"
                android:textSize="16dp"
                android:textStyle="bold"
                android:fontFamily="@font/quicksand_bold"
                android:id="@+id/latencyTxt"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latency"
                android:layout_marginTop="5dp"
                android:textColor="@color/blat1"
                android:textSize="14dp"
                android:fontFamily="@font/quicksand_medium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 KB/s"
                android:textSize="16dp"
                android:textStyle="bold"
                android:fontFamily="@font/quicksand_bold"
                android:id="@+id/speedTxt"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Download Speed"
                android:layout_marginTop="5dp"
                android:textColor="@color/blat1"
                android:textSize="14dp"
                android:fontFamily="@font/quicksand_medium" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relativeView"
        android:padding="40dp">

        <com.ekn.gruzer.gaugelibrary.ArcGauge
            android:id="@+id/speedGauge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/startTestBT"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/primary"
            android:text="@string/start"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/startTestBT"
            app:cornerRadius="13dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:fontFamily="@font/quicksand_bold"/>

    </RelativeLayout>

</LinearLayout>